@@ -211,7 +211,10 @@ class HTTPException(Exception):
     # TODO: remove in version 1.3
     @property
     def exception(self):
-        warn_deprecation("Raise HTTP exceptions directly", '1.3', 2)
+        warn_deprecation(
+            "As of WebOb 1.2, raise the HTTPException instance directly "
+            "instead of raising the result of 'HTTPException.exception'",
+            '1.3', 2)
         return self
 
 class WSGIHTTPException(Response, HTTPException):
